# LOD_manager

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICES.md  PRIVACY.md  README.md  SECURITY.md  TESTING_PROMPT.md  eslint.config.js  index.html  latest.json  loglan1.db  loglan2.db  loglan3.db-shm  loglan3.db-wal  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: android-signed.yml  autoformat.yml  ci.yml  release.yml  test-signing.yml
.husky/: pre-commit  pre-push
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/05-architectural-assessment/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  ASSESSMENT-01-COMPLIANCE.md  ASSESSMENT-02-PATTERNS.md  ASSESSMENT-03-STABILITY.md  ASSESSMENT-04-MAINTAINABILITY.md  ASSESSMENT-05-TESTING.md  PHASE5-SUMMARY.md
.planning/phases/06-recommendations-action-plan/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  PHASE6-SUMMARY.md  QUICK-WINS.md  RECOMMENDATIONS.md  RISK-MITIGATION.md
.planning/research/: DOMAIN.md
src/: App.svelte  main.ts  styles.css  types.ts
src-tauri/: .clippy.toml  Cargo.toml  build.rs  build_rs_cov.profraw  loglan.db  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  default.json.bak  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  export.rs  import.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: authors.rs  database.rs  events.rs  export.rs  import.rs  mod.rs  search.rs  types.rs  words.rs
src/lib/: store.svelte.ts  text.ts
src/lib/components/: AuthorsPanel.svelte  DeleteModal.svelte  ELResults.svelte  EventDetail.svelte  EventForm.svelte  Icon.svelte  ImportPanel.svelte  Sidebar.svelte  Sidebar.svelte.bak  Toast.svelte  ToolsDrawer.svelte  TypesPanel.svelte  WordDetail.svelte  WordForm.svelte  _placeholder.ts
tables/: LOD_L_to_E_Torrua_Dictionary_Repair_20260313_1157.html  android-signed.yml
