[package]
name = "lod-manager"
version = "1.6.5"
description = "Loglan Online Dictionary Manager"
authors = ["You"]
edition = "2024"

[lib]
# Required for Android builds — Tauri needs a shared library (.so)
# cdylib: Android .so  |  staticlib: iOS .a  |  rlib: desktop tests
# staticlib removed: causes .pdb filename collision with the bin on Windows.
# Tauri Android only needs cdylib (.so); iOS static builds are uncommon.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri             = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs   = "2.0"
tauri-plugin-os   = "2.0"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
rusqlite          = { version = "0.31", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
