[package]
name = "lod-manager"
version = "1.6.8"
description = "Loglan Online Dictionary Manager"
authors = ["You"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri             = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs   = "2.0"
tauri-plugin-os   = "2.0"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
rusqlite          = { version = "0.31", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
